changed styling. complete files

--- a/code/index.html
+++ b/code/index.html
@@ -2,83 +2,99 @@
 <html>
 
 <head>
-  <!-- Meta tag for responsiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8" />
-  <title>Lauras magazine</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet">
+    <!-- Meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <title>Lauras magazine</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet">
 
-  
+
 </head>
 
 <body>
-  <!-- logo and navbar-->
-  <header>
-    <div class="header">
-     
-      <div class="nav">
-        <img src="./images/logo.png" alt="Logotype">
-        <ul>
-          <li><a href="#">Start</a></li>
-          <li><a href="#">Articles</a></li>
-          <li><a href="#">Login</a></li>
-        </ul>
-      </div>
-      <div class="nav-mobile">
-      <img class="small-logo" src="./images/logo.png" alt="Logotype">
-        <i class="fa fa-bars fa-2x hamburger-menu">
-        </i>
-      </div>
-    </div>
-
-  </header>
-  <!-- The big news content -->
-  <section class="container">
-    <div class="cell-1 small-border-radius"><img class="image" src="./images/woman-small.jpg" alt="Woman looking straight at you"></div>
-    <div class="cell-2 small-border-radius">
-      <h2>Get the latest news and trends to live a sustainable life</h2>
-      <p>Wether you´re new to this eco friendly thing or have lived at a homestead all your life, this is the news site for you to get the latestda blanditiis temporibus tenetur, ducimus ut voluptates dolorum eos suscipit minus omnis ipsa,
-       highlights for a more earth friendly living.</p>
-    </div>
-    <!-- The other news  -->
-
-    <div class="cell-3 small-border-radius"><img class="image" src="./images/biking.jpg" alt="Woman biking in city">
-      <h2>Are you already a city biker or planning to be?</h2>
-      <p>How is it to bike in a city environment? Which towns are the most bikerfriendly in Sweden? 
-        Should you rent a bike or buy an own? All this and more in the article. </p>
+    <!-- logo and navbar-->
+    <header>
+        <div class="header">
+            <div class="nav">
+                <div>
+                    <img src="./images/logo.png" alt="Logotype">
+                </div>
+                <ul>
+                    <li><a href="#">Start</a></li>
+                    <li><a href="#">Articles</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
             </div>
+            <div class="nav-mobile">
+                <img class="small-logo" src="./images/logo.png" alt="Logotype">
+                <i class="fa fa-bars fa-2x hamburger-menu">
+                </i>
+            </div>
+        </div>
 
-    <div class="cell-4 small-border-radius"><img class="image" src="./images/solarpower.jpg" alt="Flower growing on a roof with solarpanel">
-      <h2>Is solar power the most sustainable choice?</h2>
-      <p>Everybody is talking about solar power and you see them on roofs everywhere. Is it the most sustainable choice or is there some better alternatives
-        to power up your house? We´ll take a look at all the options and rate them for you. </p>
-        
+    </header>
+    <!-- The big news content -->
+    <div class="container">
+        <div class="large-cell small-border-radius"><img class="image" src="./images/woman-small.jpg" alt="Woman looking straight at you"></div>
+        <div class="large-cell small-border-radius">
+            <h2>Get the latest news and trends to live a sustainable life</h2>
+            <p>
+                Wether you´re new to this eco friendly thing or have lived at a homestead all your life, this is the news site for you to get the latestda blanditiis temporibus tenetur, ducimus ut voluptates dolorum eos suscipit minus omnis ipsa,
+                highlights for a more earth friendly living.
+            </p>
+        </div>
+        <!-- The other news  -->
+
+        <div class="small-cell small-border-radius">
+            <img class="image" src="./images/biking.jpg" alt="Woman biking in city">
+            <h2>Are you already a city biker or planning to be?</h2>
+            <p>
+                How is it to bike in a city environment? Which towns are the most bikerfriendly in Sweden?
+                Should you rent a bike or buy an own? All this and more in the article.
+            </p>
+        </div>
+
+        <div class="small-cell small-border-radius">
+            <img class="image" src="./images/solarpower.jpg" alt="Flower growing on a roof with solarpanel">
+            <h2>Is solar power the most sustainable choice?</h2>
+            <p>
+                Everybody is talking about solar power and you see them on roofs everywhere. Is it the most sustainable choice or is there some better alternatives
+                to power up your house? We´ll take a look at all the options and rate them for you.
+            </p>
+
+        </div>
+
+        <div class="small-cell small-border-radius">
+            <img class="image" src="./images/bottles.jpg" alt="Water bottles in stainless steel and glass">
+            <p>
+                <h2>Best alternatives instead of plastic bottles</h2>
+            <p>
+                Glass, BPA free plastic bottles or stainless steel. What are the options and why would you choose one over the other?
+                We will look into some of our favorite items for beverages.
+            </p>
+        </div>
+
+        <div class="small-cell small-border-radius">
+            <img class="image" src="./images/shampoo.jpg" alt="Ecofriendly shampoos">
+            <h2>The 10 best eco friendly shampoos</h2>
+            <p>You can be both eco friendly and have lucious, fragrant hair that turns heads. But the best shampoos are not cheap. Let´s dive into the world of beauty.</p>
+        </div>
+
+        <div class="small-cell small-border-radius">
+            <img class="image" src="images/sheep.jpg" alt="Sheep and lamb in a green landscape">
+            <h2>How to start a organic farm</h2>
+            <p>
+                Have you dreamt of living on the countryside and have a vegetable garden with some farm animals? We spoke to a few families how they started their organic farms back in the days.
+                We´ll guide you to the first steps, and how to avoid rookie mistakes.
+            </p>
+        </div>
+        <div class="footer">
+            <p>All photos from Pixabay</p>
+        </div>
     </div>
-
-    <div class="cell-5 small-border-radius"><img class="image"src="./images/bottles.jpg" alt="Water bottles in stainless steel and glass">
-      <p>
-      <h2>Best alternatives instead of plastic bottles</h2>
-      <p> Glass, BPA free plastic bottles or stainless steel. What are the options and why would you choose one over the other? 
-        We will look into some of our favorite items for beverages.</p>
-        </div>
-
-    <div class="cell-6 small-border-radius"><img class="image"src="./images/shampoo.jpg" alt="Ecofriendly shampoos">
-      <h2>The 10 best eco friendly shampoos</h2>
-      <p>You can be both eco friendly and have lucious, fragrant hair that turns heads. But the best shampoos are not cheap. Let´s dive into the world of beauty.</p>
-        </div>
-
-    <div class="cell-7 small-border-radius"><img class="image" src="images/sheep.jpg" alt="Sheep and lamb in a green landscape">
-      <h2 >How to start a organic farm</h2>
-      <p>Have you dreamt of living on the countryside and have a vegetable garden with some farm animals? We spoke to a few families how they started their organic farms back in the days.
-        We´ll guide you to the first steps, and how to avoid rookie mistakes. 
-      </p>
-    </div> <!-- Maybe not keeping this part 
-    <div class="footer">
-      <p>All photos from Pixabay</p>
-    </div>-->
 </body>
 
 </html>
