your commit message

--- a/code/index.html
+++ b/code/index.html
@@ -85,7 +85,7 @@
           <img src="./images/ArtPrints.jpg" alt="installation of objects">
             <h2>Art</h2>
             <p class="img-text">
-              Decorate your walls in style.
+              Decorate your walls in <style class=""></style>
             </p>
           </article>
         <article class="blog-post">
@@ -124,6 +124,7 @@
           </p>
         </article>
 
+   
     </section>
   </body>
 </html>
