--- a/code/index.html
+++ b/code/index.html
@@ -2,30 +2,131 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Habitat Magazine</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="widht=devide-widht", initial-scale="1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
     <header>
-      <div class="navbar">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#inspiration">Inspiration</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <br>
-        <img src="habitat-logo.png" alt="picture of habitat-logo">
-      </div>
+      <!--Navbar-->
+      <nav>
+        <a href="index.html" class="logo"></a>
+        <img class="logo" src="images/habitat-logo.png" alt="habitat-logo">
+          <ul class="menu">
+              <li class="item"><a href="index.html">Home</a></li>
+              <li class="item"><a href="index.html">Magazine</a></li>
+              <img class="logo-hidden" src="images/habitat-logo.png">
+              <li class="item"><a href="index.html">Inspiration</a></li>
+              <li class="item"><a href="index.html">Contact</a></li>
+          </ul>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+<!-- Big news -->
+  <section class="big-news">
+        <div class="column-image">
+          <img class="big-news-image" src="images/mag.jpg" alt="Magazine">
+    </div>
+    <div class="big-news-artical">
+        <h1 class="big-news-text-top">New Magazine out now</h1>
+        <h2 class="big-news-text-middle">A lot of Inspiration</h2>
+        <p class="big-news-text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+  </section>
+
+  <!--Small news -->
+
+  <section class="other-news">
+    <div class="article-box">
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/bedroom.jpg" alt="bedroom">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">Bedroom</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/antique.jpg" alt="antique">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">Antique details </h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+    
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/plants.jpg" alt="plants">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">The Urban jungel</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/plywood.jpg" alt="Plywood home">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">Plywood home</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/storage.jpg" alt="storage">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">A kitch way to store</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/sticklingar.jpg" alt="sticklingar">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">Never to many cuttings</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+     </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/mirror.jpg" alt="mirror">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">It's all in the details</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+      <div class="news-article">
+        <div class="other-image">
+          <img class="other-news-image" src="images/living.jpg" alt="living">
+        </div>
+        <div class="article-text">
+          <h2 class="text-top">A modern way to style</h2>
+          <h4 class="text-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <p class="text-bottom">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        </div>
+      </div>
+    </div>
+  </section> 
+    <footer>
+      <p>Powerd by black coffee</p>
+    </footer>
   </body>
 </html>
