--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <p>Natos generalsekreterare Jens Stoltenberg varnar återigen Ryssland för militär uppbyggnad vid Ukrainas gräns. På kort tid uppges 100 000 ryska soldater ha mobiliserats, samtidigt som USA har skickat 80 ton ammunition till Ukraina i helgen.</P> 
             <p>Rysk mobilsering nära Ukrainas gränser har skapat nya farhågor för anfall. </p>
         </div>
-    <div>
+    </div>
 
     <div class="grid-small-news">
             <div class="grid-item1"> 
             <h1>Totalt kaos i vården</h1> 
             <p>Ulla 42 - Det känns trist!</p>
-            <P>Pfizers vaccinet har hittills visat sig vara effektivt för att motverka allvarlig sjukdom och dödsfall som följd av covid-19. Enligt flera studier från USA ska vaccinet ge ett 90 procentigt skydd mot att hamna på sjukhus om man smittas mot omikronvarianten. Dock har vaccinet varit mindre effektivt för att stoppa smittspridningen. <a href="/link/" class="link-in-text" target = "-blank">Ulla berättar mer om sina känslor</a> </P> 
+            <P>Pfizers vaccinet har hittills visat sig vara effektivt för att motverka allvarlig sjukdom och dödsfall som följd av covid-19. Enligt flera studier från USA ska vaccinet ge ett 90 procentigt skydd mot att hamna på sjukhus om man smittas mot omikronvarianten. Dock har vaccinet varit mindre effektivt för att stoppa smittspridningen. <span> <a href="/link/" class="link-in-text" target = "-blank">Ulla berättar mer om sina känslor.</a> </span> </P> 
             </div>
             <div class="grid-item2"> 
             <h1>Farmor - "Jag förstår inte hur viruset tar sig in i datorn"</h1> 
