made some changes after review

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-     <image class="logo-img" src= "images/logo-travel.jpg"></image>
+     <image alt="logo" class="logo-img" src= "images/logo-travel.jpg"></image>
      <nav>
       <div class="topnav">
         <a href="#home">Home</a>
@@ -27,33 +27,33 @@
 
     <article>
     <section class="big-news">
-     <image class="big-news-img" src="images/tony-lee-i-unsplash.jpg"></image>
+     <image alt="big-news" class="big-news-img" src="images/tony-lee-i-unsplash.jpg"></image>
      <h1>The best adventures for 2022</h1>
     </section>
 
 
     <section class="small-news">
-     <div><image class="news-box" src= "images/kiril-dobrev-8cQpL8kGqso-unsplash.jpg "></image>   
+     <div><image alt="news-box-1" class="news-box" src= "images/kiril-dobrev-8cQpL8kGqso-unsplash.jpg "></image>   
      <a href="#The worlds most beautiful places to dive in" target="_blank"><h3>The worlds most beautiful places to dive in</h3></a>
     </div>
 
-    <div><image class="news-box" src= "images/manuel-meurisse-sVITXInq_9k-unsplash.jpg"></image>
+    <div><image alt="news-box-2" class="news-box" src= "images/manuel-meurisse-sVITXInq_9k-unsplash.jpg"></image>
       <a href="#The magnificent sights of Lofoten" target="_blank"><h3>The magnificent sights of Lofoten</h3></a> 
     </div>     
 
-     <div><image class="news-box" src= "images/fabio-comparelli-uq2E2V4LhCY-unsplash.jpg"></image>
+     <div><image alt="news-box-3" class="news-box" src= "images/fabio-comparelli-uq2E2V4LhCY-unsplash.jpg"></image>
       <a href="#The worlds greates bridges" target="_blank"><h3>The worlds greates bridges</h3></a>
     </div>
 
-     <div><image class="news-box" src= "images/sergey-pesterev-mfX814jtyro-unsplash.jpg"></image>
+     <div><image alt="news-box-4" class="news-box" src= "images/sergey-pesterev-mfX814jtyro-unsplash.jpg"></image>
      <a href="#Hike trip to Kilimanjaro" target="_blank"><h3>Hike trip to Kilimanjaro</h3></a>
     </div>
 
-     <div><image class="news-box" src="images/tatiana-zanon-VP2mjtJqWvY-unsplash.jpg"></image> 
+     <div><image alt="news-box-5" class="news-box" src="images/tatiana-zanon-VP2mjtJqWvY-unsplash.jpg"></image> 
       <a href="#The magic of Marrakech" target="_blank"><h3>The magic of Marrakech</h3></a>
     </div>
 
-     <div><image class="news-box" src= "images/patrick-fore-YueS9MGF4Lo-unsplash.jpg"></image>
+     <div><image alt="news-box-6" class="news-box" src= "images/patrick-fore-YueS9MGF4Lo-unsplash.jpg"></image>
       <a href="#Catch the perfect wave" target="_blank"><h3>Catch the perfect wave</h3></a>
     </div> 
    </section> 
