--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
         body {
           font-family: "Trirong", serif;
         }
-        </style>
+    </style>
+
 </head>
 
 <body>
-    <header class="main-header">
 
-<img src="Ticko-bird.PNG" width="150px" alt="logo-ticko" class="logo-ticko">
-<img src="hamburgermenu.png" width="30px" alt="icon-menu" class="icon-menu"> 
+<header class="main-header">
+
+    <img src="Ticko-bird.PNG" width="150px" alt="logo-ticko" class="logo-ticko">
+    <img src="hamburgermenu.png" width="30px" alt="icon-menu" class="icon-menu"> 
 
 <div class="nav-menu"> 
 <nav>
@@ -30,14 +32,15 @@
 <a href="/link/" class="button" target = "-blank"> Logga in </a>
 </div>
 
-    </header>
+</header>
     
-    <section NYHETER>
+<section NYHETER>
 
-    <div class="grid-main-news"> 
+    <div HUVUDNYHET class="grid-main-news"> 
         <div class="main-news-left">
             <img class="picture-putin" src="putin.jpg" alt="picture-putin"> <figcaption> Photo from Google</figcaption> 
         </div>
+
         <div class="main-news-right">
               <h1>Ryssen kommer!</h1>
             <p>Natos generalsekreterare Jens Stoltenberg varnar återigen Ryssland för militär uppbyggnad vid Ukrainas gräns. På kort tid uppges 100 000 ryska soldater ha mobiliserats, samtidigt som USA har skickat 80 ton ammunition till Ukraina i helgen.</P> 
@@ -45,17 +48,21 @@
         </div>
     </div>
 
-    <div class="grid-small-news">
-            <div class="grid-item1"> 
+    <div SMÅNYHETER class="grid-small-news">
+
+        <div class="grid-item1"> 
             <h1>Totalt kaos i vården</h1> 
             <p>Ulla 42 - Det känns trist!</p>
             <P>Pfizers vaccinet har hittills visat sig vara effektivt för att motverka allvarlig sjukdom och dödsfall som följd av covid-19. Enligt flera studier från USA ska vaccinet ge ett 90 procentigt skydd mot att hamna på sjukhus om man smittas mot omikronvarianten. Dock har vaccinet varit mindre effektivt för att stoppa smittspridningen. <span> <a href="/link/" class="link-in-text" target = "-blank">Ulla berättar mer om sina känslor.</a> </span> </P> 
-            </div>
-            <div class="grid-item2"> 
+        </div>
+
+        <div class="grid-item2"> 
             <h1>Farmor - "Jag förstår inte hur viruset tar sig in i datorn"</h1> 
             <p>Europol meddelar att ett internationellt polissamarbete mellan Frankrike, Kanada, Nederländerna, Storbritannien, Tjeckien, Tyskland, Ungern, Ukraina, och USA har lett till att den kända vpn-tjänsten VPNLAB.net har stängts ner. Totalt ska polisen beslagtagit 15 servrar.</p> 
-            <img class="picture-virus" src="https://th.bing.com/th/id/OIP.rBUHJU1Gf_aWbYbVf05MMwHaEL?pid=ImgDet&rs=1" alt="picture-virus"> <figcaption> Photo from Google</figcaption> </div>
-            <div class="grid-item3"> 
+            <img class="picture-virus" src="https://th.bing.com/th/id/OIP.rBUHJU1Gf_aWbYbVf05MMwHaEL?pid=ImgDet&rs=1" alt="picture-virus"> <figcaption> Photo from Google</figcaption> 
+        </div>
+
+        <div class="grid-item3"> 
             <h1>Så här blir du lite snyggare</h1> 
             <P>Europol meddelar att ett internationellt polissamarbete mellan Frankrike, Kanada, Nederländerna, Storbritannien, Tjeckien, Tyskland, Ungern, Ukraina, och USA har lett till att den kända vpn-tjänsten VPNLAB.net har stängts ner. Totalt ska polisen beslagtagit 15 servrar.</p> 
             <ol>
@@ -63,12 +70,14 @@
               <li>Klipp dig</li>
               <li>Sträck på dig!</li>
             </ol>
-            </div>
-            <div class="grid-item4"> 
+        </div>
+
+        <div class="grid-item4"> 
             <h1>När kodningen tar död på dig</h1> 
             <p>Europol meddelar att ett internationellt polissamarbete mellan Frankrike, Kanada, Nederländerna, Storbritannien, Tjeckien, Tyskland, Ungern, Ukraina, och USA har lett till att den kända vpn-tjänsten VPNLAB.net har stängts ner. Totalt ska polisen beslagtagit 15 servrar.</p> 
-            </div>
+        </div>
     </div>
+    
     </section>
 
 
