added main in html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 </div>
 
 </header>
+
+<main>
     
 <section NYHETER>
 
@@ -77,9 +79,11 @@
             <p>Europol meddelar att ett internationellt polissamarbete mellan Frankrike, Kanada, Nederländerna, Storbritannien, Tjeckien, Tyskland, Ungern, Ukraina, och USA har lett till att den kända vpn-tjänsten VPNLAB.net har stängts ner. Totalt ska polisen beslagtagit 15 servrar.</p> 
         </div>
     </div>
-    
+
     </section>
 
+</main>
 
 </body>
+
 </html>
