addded small changes from the code reviews

--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
 
   <!-- The big news  -->
 
-  <div class="Newsbox1">
+  <section class="Newsbox1">
     <div class="child1">
       <img class="image1" src="Map.jpeg" alt="Map">
     </div>
@@ -47,7 +47,7 @@
         mostly because people’s lifestyles have changed. Tourists go to various destinations.
        </p>
     </div>
-  </div>
+  </section>
 
   <!-- The other news  -->
 
@@ -57,8 +57,8 @@
       <a href="https://www.thesitemagazine.com/call-for-submissions">
       <figure class="polaroid">
         <img class="image" src="girls.webp" alt="girld">
-    <div class="date">Jan 15 2022</div>
-    <div class="footer-text"> Studio Gang's "Actionable Idealism"</div>
+        <div class="date">Jan 15 2022</div>
+        <div class="footer-text"> Studio Gang's "Actionable Idealism"</div>
       </a>
       </figure>
   </div>
