Change of article

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
     <div HUVUDNYHET class="grid-main-news"> 
         <div class="main-news-left">
-            <img class="picture-putin" src="putin.jpg" alt="picture-putin"> <figcaption> Photo from Google</figcaption> 
+            <img class="picture-putin" src="pear.jpg" alt="picture-putin"> <figcaption> Photo from Google</figcaption> 
         </div>
 
         <div class="main-news-right">
-              <h1>Ryssen kommer!</h1>
-            <p>Natos generalsekreterare Jens Stoltenberg varnar återigen Ryssland för militär uppbyggnad vid Ukrainas gräns. På kort tid uppges 100 000 ryska soldater ha mobiliserats, samtidigt som USA har skickat 80 ton ammunition till Ukraina i helgen.</P> 
-            <p>Rysk mobilsering nära Ukrainas gränser har skapat nya farhågor för anfall. </p>
+              <h1>Ät mer päron!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus dignissimos animi consectetur laboriosam, ad voluptate reiciendis obcaecati, quidem impedit unde, corrupti numquam saepe sint praesentium eaque minima maiores reprehenderit velit.</p> 
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi voluptatem ipsa nam, minima recusandae veniam praesentium at quidem dicta alias, aspernatur et explicabo mollitia? Perferendis reprehenderit facilis fugit quae temporibus. </p>
         </div>
     </div>
 
