refactor: read me file, classnames, images object-fit

--- a/code/index.html
+++ b/code/index.html
@@ -7,10 +7,11 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
       </style>
+          <link rel="shortcut icon" href="./DogMagazine_Logo.png" type="image/x-icon" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
+      </head>
+
   <body>
     <header class="top-header">
         <img class="logo-pic" src="./DogMagazine_Logo.png" alt="logo">
@@ -25,9 +26,9 @@
     </header>
     <section class="big-news">
         <div class= "imagewrapper">
-            <img class="big-pic" src="./raquel-garcia-5CwzyUTKuUo-unsplash.jpg" alt="dogs running">
+            <img class="big-pic" src="./images/raquel-garcia-5CwzyUTKuUo-unsplash.jpg" alt="dogs running">
         </div>
-        <div class="grid-1">
+        <div class="big-news-text">
             <h2>How much exercise does your dog need daily to be happy?</h2>
             <p>Studies have always shown that exercise is critical to a dog's physical and mental health. But how much exercise is recommended? This article will help you understand and identify your dog's needs and the different exercises that can help you have the best life possible.
         </p>
@@ -35,8 +36,8 @@
     </section>
 
     <section class="small-news">
-        <div class= "grid-2">
-           <img class="small-pic" src="./james-lacy-xe_MtM-ixlw-unsplash.jpg" alt="Dog eating a treat">
+        <div class= "medium-news-text">
+           <img class="small-pic" src="./images/james-lacy-xe_MtM-ixlw-unsplash.jpg" alt="Dog eating a treat">
         <div class="medium-news">
            <h2>Sharing is caring</h2>
            <p>While there are some human foods that dogs should never eat, for the most part what’s healthy for you is healthy for your pet.  </br>
@@ -44,27 +45,27 @@
           </p>
         </div>
         </div>
-        <div class= "grid-3">
-            <img class="little-pic" src="./laula-co-UXCImW3IVg0-unsplash.jpg" alt="Dog doing agility exercise">
+        <div class= "small-news-text">
+            <img class="little-pic" src="./images/laula-co-UXCImW3IVg0-unsplash.jpg" alt="Dog doing agility exercise">
             <h2>Agility: </h2>
             <h3 class="sub-text">the new bonding exercise that you need to learn about</h3>
         </div>
-        <div class= "grid-4">
-            <img class="little-pic" src="./jimmy-conover-ajPr3kQBWFw-unsplash.jpg" alt="Dog traveling in a car">
+        <div class= "small-news-text">
+            <img class="little-pic" src="./images/jimmy-conover-ajPr3kQBWFw-unsplash.jpg" alt="Dog traveling in a car">
             <h2>Dog friendly places to travel with the hole family the next vacation</h2>
         </div>
-        <div class= "grid-5">
-            <img class="little-pic" src="./jamie-street-uNNCs5kL70Q-unsplash.jpg" alt="Dog caring a branch">
+        <div class= "small-news-text">
+            <img class="little-pic" src="./images/jamie-street-uNNCs5kL70Q-unsplash.jpg" alt="Dog caring a branch">
             <h2>Puppy's teething.</h2>
             <h3 class="sub-text">What to do when your dog chews everything</h3>
         </div>
-        <div class= "grid-6">
-            <img class="little-pic" src="./sdf-rahbar-dw7paFI1jnM-unsplash-2.jpg" alt="Dog under blanckets">
+        <div class= "small-news-text">
+            <img class="little-pic" src="./images/sdf-rahbar-dw7paFI1jnM-unsplash-2.jpg" alt="Dog under blanckets">
             <h2>Get ready for the winter time!</h2>
             <h3 class="sub-text">Your fury friend feels cold too</h3>
         </div>
-        <div class= "grid-7">
-            <img class="small-pic" src="./matt-nelson-aI3EBLvcyu4-unsplash.jpg" alt="Dogs on a walk">
+        <div class= "medium-news-text">
+            <img class="small-pic" src="./images/matt-nelson-aI3EBLvcyu4-unsplash.jpg" alt="Dogs on a walk">
             <div class="medium-news">
               <h2>Exercise and socialization?</h2>
               <h3>Pros and cons of pack walking</h3>
@@ -74,10 +75,10 @@
     </section>
 
     <footer> 
-        <nav class="footer-info">
+        <div class="footer-info">
           <h2>Contact us</h2> 
-          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons"></p>
-        </nav>
+          <img class="footer-pic" src="./images/Social-Icons-01-Free-SVG.png" alt="Social media icons"></p>
+        </div>
     </footer> 
   
   </body>
