html in progress- nav is done.

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="title">
+        <h1 class="title-h1"><span>Sailor Moon</span> news sourse </h1>
+        <p class="title-sub">FAN NETWORK</p>
+      </div>
+
+      <nav class="nav__page">
+        <a href="#News" class="nav-page-link">News</a>
+        <a href="#Merchandise" class="nav-page-link">Merchandise</a>
+        <a href="#Information" class="nav-page-link">Information</a>
+        <a href="#Which-Sailor-Are-You?" class="nav-page-link">Which Sailor are you?</a>
+        <a href="#About-Us" class="nav-page-link">About us</a>
+      </nav>
     </header>
+    
+    <article class="grid">
+     <section class="grid-col-2">
+      <div class="grid-item-lg">
+        <img src="https://www.themarysue.com/which-sailor-moon-incarnation-is-right-for-you/" class="grid-item-img">
+        <p class="grid-item-category">Pretty Guardian Sailor Moon</p>
+        <h4 class="grid-item-title">Pretty Guardian Sailor Moon Cosmos The Movie - 2 Part Film Summer 2023 The Sailor Moon 30th Anniversary Special Program</h4>
+        <p class="grid-item-author">By Fan Network</p>
+      </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+     </section>
 
-    <section class="">
+     <section class="">
       <!-- The other news  -->
-    </section>
+     </section>
+   </article>
   </body>
 </html>
