--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="nav-bar">
       <!-- Some kind of logo and navbar -->
+      <img src="" alt="The Moon logo">
+      <h1 class="logo-text">The Moon</h1>
+
+
+      <nav class="menu">
+        <a class="menu-links" href="#">News</a>
+        <a class="menu-links" href="#">Tech</a>
+        <a class="menu-links" href="#">Media</a>
+        <a class="menu-links" href="#">Contact</a>
+      </nav>
     </header>
 
     <section class="big-news">
