added an icon for the logo and started styling the navbar

--- a/code/index.html
+++ b/code/index.html
@@ -15,9 +15,11 @@
   <body>
     <header class="nav-bar">
       <!-- Some kind of logo and navbar -->
-      <img src="" alt="The Moon logo">
-      <h1 class="logo-text">The Moon</h1>
 
+      <img class="logo-icon" src="https://img.icons8.com/color/48/000000/moon-satellite.png"
+        alt="The Moon logo icon"
+      />
+      <h1 class="logo-text">The Moon</h1>
 
       <nav class="menu">
         <a class="menu-links" href="#">News</a>
