added hamburger menu icon and some more styling to the navbar

--- a/code/index.html
+++ b/code/index.html
@@ -15,14 +15,24 @@
   <body>
     <header class="nav-bar">
       <!-- Some kind of logo and navbar -->
+      
+      <div class="logo">
+        <img
+          class="logo-icon"
+          src="https://img.icons8.com/color/48/000000/moon-satellite.png"
+          alt="The Moon logo icon"
+        />
+        <h1 class="logo-text">The Moon</h1>
+      </div>
 
-      <img class="logo-icon" src="https://img.icons8.com/color/48/000000/moon-satellite.png"
-        alt="The Moon logo icon"
-      />
-      <h1 class="logo-text">The Moon</h1>
-
+      <nav class="hamburger-menu-icon">
+        <div class="hamburger-stripes"></div>
+        <div class="hamburger-stripes"></div>
+        <div class="hamburger-stripes"></div>
+      </nav>
+      
       <nav class="menu">
-        <a class="menu-links" href="#">News</a>
+        <a class="menu-links active" href="#">News</a>
         <a class="menu-links" href="#">Tech</a>
         <a class="menu-links" href="#">Media</a>
         <a class="menu-links" href="#">Contact</a>
