styling of the big news section

--- a/code/index.html
+++ b/code/index.html
@@ -13,38 +13,71 @@
     />
   </head>
   <body>
-    <header class="nav-bar">
-      <!-- Some kind of logo and navbar -->
-      
-      <div class="logo">
+    <!-- Some kind of logo and navbar -->
+    <header class="navbar">
+      <div class="navbar-logo">
         <img
-          class="logo-icon"
+          class="navbar-logo-icon"
           src="https://img.icons8.com/color/48/000000/moon-satellite.png"
           alt="The Moon logo icon"
         />
-        <h1 class="logo-text">The Moon</h1>
+        <h1 class="navbar-logo-text">The Moon</h1>
       </div>
 
-      <nav class="hamburger-menu-icon">
-        <div class="hamburger-stripes"></div>
-        <div class="hamburger-stripes"></div>
-        <div class="hamburger-stripes"></div>
+      <nav class="navbar-hamburger-icon">
+        <div class="navbar-hamburger-stripes"></div>
+        <div class="navbar-hamburger-stripes"></div>
+        <div class="navbar-hamburger-stripes"></div>
       </nav>
-      
-      <nav class="menu">
-        <a class="menu-links active" href="#">News</a>
-        <a class="menu-links" href="#">Tech</a>
-        <a class="menu-links" href="#">Media</a>
-        <a class="menu-links" href="#">Contact</a>
+
+      <nav class="navbar-menu">
+        <a class="navbar-menu-links active" href="#">News</a>
+        <a class="navbar-menu-links" href="#">Tech</a>
+        <a class="navbar-menu-links" href="#">Media</a>
+        <a class="navbar-menu-links" href="#">Contact</a>
       </nav>
     </header>
 
+    <!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="big-news-imagebox">
+        <img
+          class="big-news-image"
+          src="https://images.pexels.com/photos/796583/pexels-photo-796583.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+          alt=""
+        />
+      </div>
+
+      <div class="big-news-text">
+        <h1 class="big-news-heading">
+          How to Quit Your Day Job and Focus on Lorem Ipsum
+        </h1>
+        <p class="big-news-p">
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+          officia deserunt mollit anim id est laborum.
+        </p>
+        <button class="big-news-button">Read more</button>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <!-- Other news content -->
+    <section class="other-news-grid">
+      <article class="other-news other-news-1">
+        <img src="" alt="" />
+
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+        </div>
+      </article>
+
+      <article class="other-news other-news-2">2</article>
+      <article class="other-news other-news-3">3</article>
+      <article class="other-news other-news-4">4</article>
+      <article class="other-news other-news-5">5</article>
+      <article class="other-news other-news-6">6</article>
+      <article class="other-news other-news-7">7</article>
+      <article class="other-news other-news-8">8</article>
     </section>
   </body>
 </html>
